--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@gsap/react": "^2.1.2",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-tabs": "^1.1.13",
     "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
