feat: moved migration tool to API + rate limit

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@upstash/ratelimit": "^2.0.6",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/kv": "^3.0.0",
     "class-variance-authority": "^0.7.1",
     "framer-motion": "^12.23.22",
     "fumadocs-core": "15.8.2",
