--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.4.0",
     "@upstash/ratelimit": "^2.0.6",
     "@vercel/analytics": "^1.5.0",
     "@vercel/kv": "^3.0.0",
@@ -25,6 +27,7 @@
     "fumadocs-ui": "15.8.2",
     "gsap": "^3.13.0",
     "lenis": "^1.3.11",
+    "leva": "^0.10.1",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "openai": "^6.5.0",
